[tool.poetry]
name = "devitalik-zx"
version = "0.1.0"
description = "DeVitalik ZX Bot"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openai = "^1.3.0"
tweepy = "^4.14.0"
anthropic = "^0.5.0"
pydantic = "^2.0.0"
prompt-toolkit = "^3.0.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
